// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component ProsemirrorRender > renders simple mark 1`] = `
"<div>
  <p><b>content</b></p>
</div>"
`;

exports[`component ProsemirrorRender > renders simple node 1`] = `
"<div>
  <p>content</p>
</div>"
`;
